--- a/src/ImageUpload.css
+++ b/src/ImageUpload.css
@@ -4,8 +4,14 @@
   width: 60%;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 10px;
+  margin-top: 40px;
   margin-bottom: 10px;
   position: fixed;
-  bottom: 0;
+  /* bottom: 0; */
+  background-color: white;
+  border-top: 1px solid lightgray;
+}
+
+.imageUpload__progress {
+  width: 100%;
 }
