--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,21 @@
   background-color: #fafafa;
 }
 
+.app__posts {
+  padding: 20px;
+}
+
 .app__header {
   background-color: white;
-  object-fit: contain;
   padding: 20px;
   border-bottom: 1px solid lightgray;
+  object-fit: contain;
+  display: flex;
+  justify-content: space-between;
+}
+
+.app__headerImage {
+  object-fit: contain;
 }
 
 .app__signUp {
