--- a/src/ImageUpload.css
+++ b/src/ImageUpload.css
@@ -6,7 +6,7 @@
   margin-left: auto;
   margin-top: 40px;
   margin-bottom: 10px;
-  position: fixed;
+  /* position: fixed; */
   /* bottom: 0; */
   background-color: white;
   border-top: 1px solid lightgray;
