--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,13 +1,10 @@
 .footer {
   background-color: black;
   color: white;
-  /* height: 10vh; */
 }
 
 .footer__title {
   text-align: center;
   margin-top: 5px;
-}
-h1 {
-  margin-top: 5px;
+  padding: 10px;
 }
