--- a/src/App.css
+++ b/src/App.css
@@ -6,24 +6,11 @@
 }
 
 .app {
-  /* background-color: #fafafa; */
+  background-color: #fafafa;
 }
 
 .app__posts {
-  background: #dddddd3d;
-  /* background-color: black; */
-  /* background: #ff5f6d; */
-  /* background: -webkit-linear-gradient(
-    to right,
-    #ffc371,
-    #ff5f6d
-  );
-  background: linear-gradient(
-    to right,
-    #ffc371,
-    #ff5f6d
-  ); */
-
+  background: #9493933d;
   padding: 20px;
   display: flex;
   justify-content: center;
@@ -34,7 +21,14 @@
 }
 
 .app__header {
-  background: #dd2a7b;
+  background-image: linear-gradient(
+    to right,
+    #f58529,
+    #f96b3d,
+    #f75252,
+    #ee3a66,
+    #dd2a7b
+  );
   position: sticky;
   top: 0;
   z-index: 1;
